--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "crypto-js": "^4.1.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.0",
+    "luxon": "^3.6.1",
     "multer": "^1.4.5-lts.1",
     "node-forge": "^1.3.1",
     "nodemailer": "^6.8.0",
